# media-control-bridge

./: PREBUILT_STATUS.txt  README.md
.github/workflows/: build.yml
python/: media_bridge.py
rust/media-control-bridge/: Cargo.toml
rust/media-control-bridge/src/: linux_mpris_client.rs  main.rs  net.rs  protocol.rs  server.rs  target.rs  windows_smtc.rs
scripts/: build-linux-x86_64.sh  build-windows-x86_64-gnu-from-linux.sh  build-windows-x86_64.ps1
